force-app/main/default/objects/Software_Assignment__c/Software_Assignment__c.object-meta.xml
<CustomObject>
    <label>Software Assignment</label>
    <nameField>
        <displayFormat>Sr No.-{0000}</displayFormat>
        <label>Sr No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Software Assignment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>