force-app/main/default/objects/Software_Assignment__c/fields/Assigned_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Start_Date__c</fullName>
    <label>Assigned Start Date</label>
    <type>Date</type>
</CustomField>