force-app/main/default/objects/Software_Assignment__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <label>Employee Name</label>
    <referenceTo>Employee_Detail__c</referenceTo>
    <relationshipLabel>Software Assignment</relationshipLabel>
    <relationshipName>Software_Assignment</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>