force-app/main/default/objects/Software_Assignment__c/fields/Reason_of_Unassignment__c.field-meta.xml
<CustomField>
    <fullName>Reason_of_Unassignment__c</fullName>
    <description>This field will contain description of reason for Unassignment of an asset</description>
    <label>Reason of Unassignment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>