force-app/main/default/objects/Software_Assignment__c/fields/Software_Asset__c.field-meta.xml
<CustomField>
    <fullName>Software_Asset__c</fullName>
    <label>Software Asset</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>No more Availabe Licenses to be assigned.</errorMessage>
        <filterItems>
            <field>Asset__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Software</value>
        </filterItems>
        <filterItems>
            <field>Asset__c.Available_Licenses__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Software Assignment</relationshipLabel>
    <relationshipName>Software_Assignment</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>