force-app/main/default/objects/Software_Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Software_Asset__c</columns>
    <columns>Employee_Name__c</columns>
    <columns>Assigned_Start_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Reason_of_Unassignment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>