force-app/main/default/objects/Software_Assignment__c/listViews/Inactive_Software_License.listView-meta.xml
<ListView>
    <fullName>Inactive_Software_License</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Inactive</value>
    </filters>
    <label>Inactive Software License</label>
</ListView>