force-app/main/default/objects/Software_Assignment__c/listViews/Recently_Assigned_Asset_within_7_days.listView-meta.xml
<ListView>
    <fullName>Recently_Assigned_Asset_within_7_days</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assigned_Start_Date__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>Recently Assigned Asset (within 7 days)</label>
</ListView>