force-app/main/default/objects/Software_Assignment__c/listViews/Unassigned_Licenses_within_last_7_days.listView-meta.xml
<ListView>
    <fullName>Unassigned_Licenses_within_last_7_days</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assignment_End_Date__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>Unassigned Licenses within last 7 days</label>
</ListView>